# object_detection_opencv

./: .gitignore  CMakeLists.txt  Object Detection.lnk  README.md  build.bat
src/: CMakeLists.txt  main.cpp  objectDetection.cpp  objectDetection.h
